--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,12 +17,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Deploy via SSH
-        uses: appleboy/ssh-action@v0.1.0
+        id: action-ssh
+        uses: tiyee/action-ssh@release
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
+          command: |
             cd ~/book-rating-app
             git checkout ${{ github.ref_name }}
             git pull origin ${{ github.ref_name }}
