--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Deploy via SSH
         id: action-ssh
-        uses: tiyee/action-ssh@release
+        uses: tiyee/action-ssh@v1.0.1
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USERNAME }}
