--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "jest",
     "test:watch": "jest --watch",
+    "lint": "eslint --ext .ts,.tsx src/",
+    "lint:fix": "eslint --ext .ts,.tsx src/ --fix",
     "eject": "react-scripts eject"
   },
   "dependencies": {
@@ -22,13 +24,17 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0",
     "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.8",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@types/jest": "^29.5.8",
-    "ts-jest": "^29.1.1",
-    "identity-obj-proxy": "^3.0.0"
+    "ts-jest": "^29.1.1"
   },
   "license": "MIT",
   "browserslist": {
