--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
     permissions:
       packages: write
       id-token: write
+      attestations: write
 
     steps:
       - uses: actions/checkout@v4
