--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ env:
 jobs:
   lint-test:
     runs-on: ubuntu-latest
+    environment: development
 
     steps:
       - uses: actions/checkout@v4
@@ -31,7 +32,9 @@ jobs:
         run: npm test
   
   release-deploy:
+    needs: [lint-test]
     runs-on: ubuntu-latest
+    environment: development
 
     permissions:
       packages: write
