ci: refactored how commit_sha is obtained during pipeline execution

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   CONTAINER_NAME: ${{ github.event.repository.name }}
+  COMMIT_SHA: ${{ github.sha }}
 
 jobs:
   lint-test:
