--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,9 +32,6 @@ jobs:
       
       - name: Lint
         run: npm run lint
-      
-      - name: Test
-        run: npm test
 
   test:
     runs-on: ubuntu-latest
@@ -72,6 +69,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          load: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=docker,dest=${{ runner.temp }}/${{ env.IMAGE_NAME }}.tar
