--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - main
+    tags:
+      - 'v*'
   pull_request: 
     branches:
       - main
+  release:
+    types: [created]
   workflow_dispatch:
 
 env:
@@ -15,6 +19,7 @@ env:
   IMAGE_NAME: ${{ github.event.repository.name }} # book-rating-app
   CONTAINER_NAME: ${{ github.event.repository.name }} # book-rating-app
   COMMIT_SHA: ${{ github.sha }}
+  GIT_TAG: ${{ github.ref_type == 'tag' && github.ref_name || 'n/a' }}
 
 jobs:
   
@@ -156,4 +161,3 @@ jobs:
             podman stop ${{ env.CONTAINER_NAME }} || true
             podman rm ${{ env.CONTAINER_NAME }} || true
             podman run -d --name ${{ env.CONTAINER_NAME }} -p 3000:3000 ${{ needs.publish.outputs.tags }}
-            
