--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,20 +175,16 @@ jobs:
     environment: development
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    - name: Azure Login
+      uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Set up Azure CLI
-      uses: azure/CLI@v2
-
-    - name: Login to Azure
-      run: az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
-
-    - name: Deploy to AKS
-      run: |
-        az aks get-credentials --resource-group bookRatingAppGroup --name myAKSCluster
-        kubectl set image deployment/${{ env.CONTAINER_NAME }} book-rating-app=${{ env.IMAGE_TAG_SHA }}
-
-    - name: Refresh Deployment
-      run: |
-        kubectl rollout restart deployment//${{ env.CONTAINER_NAME }}
+    - name: Azure CLI script
+      uses: azure/cli@v2
+      with:
+        azcliversion: latest
+        inlineScript: |
+          az aks get-credentials --resource-group bookRatingAppGroup --name myAKSCluster
+          kubectl set image deployment/${{ env.CONTAINER_NAME }} book-rating-app=${{ env.IMAGE_TAG_SHA }}
+          kubectl rollout restart deployment//${{ env.CONTAINER_NAME }}
