--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,13 +176,16 @@ jobs:
     environment: development
 
     steps:
+    - uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - uses: azure/setup-kubectl@v4
 
     - uses: Azure/aks-set-context@v4
       with:
-          creds: '${{ secrets.AZURE_CREDENTIALS }}'
           cluster-name: ${{ env.AZURE_CLUSTER_NAME }}
-          resource-group: ${ env.AZURE_RESOURCE_GROUP }}
+          resource-group: ${{ env.AZURE_RESOURCE_GROUP }}
 
     - uses: Azure/k8s-deploy@v5
       with:
