--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,19 +176,23 @@ jobs:
     environment: development
 
     steps:
-    - uses: azure/login@v2
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - uses: actions/checkout@v4
+      
+      - uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - uses: azure/setup-kubectl@v4
+      - uses: azure/setup-kubectl@v4
 
-    - uses: Azure/aks-set-context@v4
-      with:
-          cluster-name: ${{ env.AZURE_CLUSTER_NAME }}
-          resource-group: ${{ env.AZURE_RESOURCE_GROUP }}
+      - uses: Azure/aks-set-context@v4
+        with:
+            cluster-name: ${{ env.AZURE_CLUSTER_NAME }}
+            resource-group: ${{ env.AZURE_RESOURCE_GROUP }}
 
-    - uses: Azure/k8s-deploy@v5
-      with:
-          action: deploy
-          images: |
-            ${{ env.IMAGE_TAG_SHA }}
+      - uses: Azure/k8s-deploy@v5
+        with:
+            action: deploy
+            manifests: |
+              k8s/manifest.yaml
+            images: |
+              ${{ env.IMAGE_TAG_SHA }}
