--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    tags:
-      - 'v*'
+    # tags: # commented out in favor of release event
+    #   - 'v*'
   pull_request: 
     branches:
       - main
