--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.1.1"
   },
+  "overrides": {
+    "nth-check": "2.1.1"
+  },
   "license": "MIT",
   "browserslist": {
     "production": [
