--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "ts-jest": "^29.1.1"
   },
   "overrides": {
-    "nth-check": "2.1.1"
+    "nth-check": "2.1.1",
+    "postcss": "8.5.3"
   },
   "license": "MIT",
   "browserslist": {
